<resources>
    <string name="app_name" translatable="false">Unjhawala Admin</string>
    <string name="default_notification_channel_id" translatable="false">Unjhawala Tea</string>
    <string name="google_maps_key" translatable="false">AIzaSyDQha_WbwHoJqrtsFUqxPIdjp1IevSvkwU</string>
    <string name="font_family_medium" translatable="false">sans-serif-medium</string>
    <string name="font_family_regular" translatable="false">sans-serif</string>
    <string name="ripple_duration" translatable="false">200</string>
    <string name="desc_order" translatable="false">DESC</string>
    <string name="error_bad_request_400">The request could not be understood by the server due to malformed syntax.</string>
    <string name="error_unauthorized_401">The request requires user authentication. The response MUST include a WWW-Authenticate header field.</string>
    <string name="error_forbidden_403">The server understood the request but is refusing to fulfill it.</string>
    <string name="error_not_found_404">The server has not found anything matching the Request-URI.</string>
    <string name="error_method_not_allowed_405">The method specified in the Request-Line is not allowed for the resource identified by the Request-URI.</string>
    <string name="error_request_timeout_408">Your request timed out. Please retry the request.</string>
    <string name="error_request_entity_too_large_413">The server is refusing to process a request because the request entity is larger than the server is willing or able to process.</string>
    <string name="error_request_uri_too_long_414">The server is refusing to service the request because the Request-URI is longer than the server is willing to interpret.</string>
    <string name="error_internal_server_error_500">The server encountered an unexpected condition which prevented it from fulfilling the request.</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="msg_unauthorized">We are signing you out as we found your account access from another device</string>
    <string name="ok">Ok</string>
    <string name="sign">Sign</string>
    <string name="in">In.</string>
    <string name="sign_in_screen_note">Hello there!\nWelcome back to Unique Power\nTechnologies</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="msg_exit_app">Press again to exit</string>
    <string name="dashboard">Dashboard</string>
    <string name="report">Report</string>
    <string name="about">About</string>
    <string name="error_empty_pin">Enter valid pin</string>
    <string name="error_empty_otp">Enter valid otp</string>
    <string name="close">Close</string>
    <string name="msg_receive_otp_for_verification">You’ll receive 4 digit OTP for verification.</string>
    <string name="msg_text_copied">Text copied to clipboard</string>
    <string name="error_name_mandatory">Please enter name</string>
    <string name="hint_sign_up_account">Don\'t have an account?</string>
    <string name="hint_login_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_phone_number">Please enter mobile number</string>
    <string name="phone_number">Phone Number</string>
    <string name="error_phone_number_min_length">Please enter valid mobile number</string>
    <string name="photos">Photos</string>
    <string name="pdf">Pdf</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="set_mpin">Set MPIN</string>
    <string name="enter_mpin">Enter MPIN</string>
    <string name="set_mpin_note">Set your 4 digit mpin for faster login</string>
    <string name="enter_mpin_note">Enter your 4 digit mpin for faster login</string>
    <string name="set">Set</string>
    <string name="display_otp_sent_to_mobile_number">OTP is sent to %s</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="camera">Camera</string>
    <string name="select_photos">Select Photos</string>
    <string name="msg_no_application_found">No Application available to view this file</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_name_ascending">Name A to Z</string>
    <string name="sort_by_name_descending">Name Z to A</string>
    <string name="sort_by_price_low_to_high">Price Low to High</string>
    <string name="sort_by_price_high_to_low">Price High to Low</string>
    <string name="sort_by_date_modified">Date Modified</string>
    <string name="company_name">Company Name</string>
    <string name="error_empty_company_name">Enter Company Name</string>
    <string name="address_optional">Address (Optional)</string>
    <string name="error_empty_state">Select State</string>
    <string name="error_empty_city">Enter City</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="change_number">Change Number?</string>
    <string name="available_kg">Available Kg</string>
    <string name="current_year_kg">Current Year Kg</string>
    <string name="last_year_kg">Last Year KG</string>
    <string name="quick_links">Quick Links</string>
    <string name="my_account_">My\nAccount</string>
    <string name="my_order_">My\nOrder</string>
    <string name="my_order">My Order</string>
    <string name="pending_orders_">Pending\nOrders</string>
    <string name="daily_sales_report_">Daily\nSalesReport</string>
    <string name="scan_code">Scan Code</string>
    <string name="transfer_kg">Transfer Kg</string>
    <string name="my_network">My Network</string>
    <string name="new_order">New Order</string>
    <string name="agency">Agency</string>
    <string name="retailor">Retailer</string>
    <string name="working_area_">Working\nArea</string>
    <string name="sales_person_">Sales\nPerson</string>
    <string name="utilities">Utilities</string>
    <string name="to_do">To Do</string>
    <string name="cash_calculator_">Cash\nCalculator</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="tea_configuration_">Tea\nConfiguration</string>
    <string name="tea_configuration">Tea Configuration</string>
    <string name="tea_sample_">Tea\nSamples</string>
    <string name="tea_samples">Tea Samples</string>
    <string name="tea_testing_">Tea\nTesting</string>
    <string name="tea_confirmation_">Tea\nConfirmation</string>
    <string name="msg_camera_permission">This application needs access to your camera</string>
    <string name="i_agree">I agree</string>
    <string name="lbl_filter_by_date">Filter By Date</string>
    <string name="title_update_app">Update Available</string>
    <string name="msg_update_app">There is newer version of this application available, Click on OK to update</string>
    <string name="support">Support</string>
    <string name="msg_otp_resend">OTP resend successfully</string>
    <string name="display_resend_otp_counter">Resend OTP in %s second</string>
    <string name="error_empty_data">No data found</string>
    <string name="loading_more">Loading more&#8230;</string>
    <string name="search_here">Search here...</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="view_all">View All</string>
    <string name="view">View</string>
    <string name="sign_rupees">₹</string>
    <string name="edit">Edit</string>
    <string name="msg_delete_item">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="garden_area">Garden Area</string>
    <string name="add_garden_area">Add Garden Area</string>
    <string name="add_tea_source">Add Tea Source</string>
    <string name="area_compulsory">Area <font color='#FF0000'>*</font></string>
    <string name="name_compulsory">Name <font color='#FF0000'>*</font></string>
    <string name="Status">Status</string>
    <string name="quality">Quality</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="save">Save</string>
    <string name="managing_positions">Managing Positions</string>
    <string name="tea_garden_area">Tea Garden Area</string>
    <string name="leaf_type">Leaf Type</string>
    <string name="tea_garden">Tea Garden</string>
    <string name="tea_grade">Tea Grade</string>
    <string name="tea_quality">Tea Quality</string>
    <string name="tea_type">Tea Type</string>
    <string name="tea_colour">Tea Colour</string>
    <string name="tea_density">Tea Density</string>
    <string name="tea_season">Tea Season</string>
    <string name="tea_product_preference">Tea Product Preference</string>
    <string name="tea_inward_bag_type">Tea Inward Bag Type</string>
    <string name="tea_source">Tea Source</string>
    <string name="empty_edittext_error">Required Field</string>
    <string name="leaf_type_compulsory">Leaf Type*</string>
    <string name="select_leaf_type">Select Leaf Type</string>
    <string name="select_area">Select Area</string>
    <string name="enter_number_of_days">Enter no of days</string>
    <string name="date_mandatory">Date <font color='#FF0000'>*</font></string>
    <string name="vendor_mandatory">Vendor <font color='#FF0000'>*</font></string>
    <string name="garden_mandatory">Garden <font color='#FF0000'>*</font></string>
    <string name="invoice_number_mandatory">Invoice Number <font color='#FF0000'>*</font></string>
    <string name="grade_mandatory">Grade <font color='#FF0000'>*</font></string>
    <string name="bag_mandatory">Bag <font color='#FF0000'>*</font></string>
    <string name="weight_in_kg_mandatory">Weight (Kg) <font color='#FF0000'>*</font></string>
    <string name="rate_in_rs_mandatory">Rate (₹) <font color='#FF0000'>*</font></string>
    <string name="total_quantity_in_kg_mandatory">Total Quantity (Kg) <font color='#FF0000'>*</font></string>
    <string name="qty">Qty</string>
    <string name="save_and_add">Save &amp; Add</string>
    <string name="create_tea_sample">Create Tea Sample</string>
    <string name="update_tea_sample">Update Tea Sample</string>
    <string name="select_vendor">Select Vendor</string>
    <string name="select_garden">Select Garden</string>
    <string name="select_grade">Select Grade</string>
    <string name="select_personal_grade">Select Personal Grade</string>
    <string name="select_cutting">Select Cutting</string>
    <string name="select_colour">Select Colour</string>
    <string name="select_density">Select Density</string>
    <string name="select_tea_source_level_1">Select Tea Source Level 1</string>
    <string name="select_tea_source_level_2">Select Tea Source Level 2</string>
    <string name="select_tea_source_level_3">Select Tea Source Level 3</string>
    <string name="select_season_and_quality">Select Season</string>
    <string name="select_our_quality">Select Quality</string>
    <string name="select_tea_preference">Select Tea Preference</string>
    <string name="rate">Rate</string>
    <string name="personal_grade_mandatory">Personal Grade <font color='#FF0000'>*</font></string>
    <string name="cutting_mandatory">Cutting <font color='#FF0000'>*</font></string>
    <string name="colour_mandatory">Colour <font color='#FF0000'>*</font></string>
    <string name="density_mandatory">Density <font color='#FF0000'>*</font></string>
    <string name="tea_source_level_1">Tea Source Level 1</string>
    <string name="tea_source_level_2">Tea Source Level 2</string>
    <string name="view_added_tea_bills">View added tea bills</string>
</resources>