<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="signUpRequest"
            type="com.unjhawalateaadmin.authentication.data.model.SignUpRequest" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <View
            android:id="@+id/divider"
            style="@style/ToolbarDivider"
            android:layout_below="@id/toolbar" />

        <TextView
            android:id="@+id/txtTitle"
            style="@style/VerySmallFontTextView"
            android:layout_below="@id/divider"
            android:layout_marginTop="@dimen/size_15dp"
            android:fontFamily="@string/font_family_medium"
            android:paddingStart="@dimen/size_32dp"
            android:paddingEnd="0dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_size_22sp"
            android:visibility="gone" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/routBottomView"
            android:layout_below="@id/txtTitle"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/size_32dp"
                android:paddingRight="@dimen/size_32dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutFullName"
                    android:layout_marginTop="@dimen/size_15dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorHint"
                    app:errorIconDrawable="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_light_bg_solid"
                        android:hint="@string/full_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:text="@={signUpRequest.name}"
                        android:textSize="@dimen/text_size_15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutPhoneNumber"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutFullName"
                    android:layout_marginTop="@dimen/size_12dp"
                    android:textColorHint="@color/colorHint"
                    app:errorIconDrawable="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_light_bg_solid"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:text="@={signUpRequest.phone_number}"
                        android:textSize="@dimen/text_size_15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutCompanyName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutPhoneNumber"
                    android:layout_marginTop="@dimen/size_12dp"
                    android:textColorHint="@color/colorHint"
                    app:errorIconDrawable="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCompanyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_light_bg_solid"
                        android:hint="@string/company_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:text="@={signUpRequest.company_name}"
                        android:textSize="@dimen/text_size_15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutState"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutCompanyName"
                    android:layout_marginTop="@dimen/size_12dp"
                    android:textColorHint="@color/colorHint"
                    app:errorIconDrawable="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_light_bg_solid"
                        android:drawableEnd="@drawable/ic_arrow_down"
                        android:focusable="false"
                        android:hint="@string/state"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:text="@={signUpRequest.state}"
                        android:textSize="@dimen/text_size_15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutCity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutState"
                    android:layout_marginTop="@dimen/size_12dp"
                    android:textColorHint="@color/colorHint"
                    app:errorIconDrawable="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_light_bg_solid"
                        android:hint="@string/city"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:text="@={signUpRequest.city}"
                        android:textSize="@dimen/text_size_15sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutAddress"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutCity"
                    android:layout_marginTop="@dimen/size_12dp"
                    android:textColorHint="@color/colorHint"
                    app:errorIconDrawable="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_light_bg_solid"
                        android:gravity="top"
                        android:hint="@string/address_optional"
                        android:minLines="2"
                        android:text="@={signUpRequest.address}"
                        android:textSize="@dimen/text_size_16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/save_button_height_50dp"
                    android:layout_below="@+id/layoutAddress"
                    android:layout_marginTop="@dimen/size_30dp"
                    android:layout_marginBottom="@dimen/size_15dp"
                    android:background="@drawable/rounded_button_bg_solid"
                    app:mrl_rippleColor="@color/colorRippleColor"
                    app:mrl_rippleDelayClick="true"
                    app:mrl_rippleDuration="@string/ripple_duration"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <TextView
                        android:id="@+id/txtSignUp"
                        style="@style/SmallFont"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_15sp" />
                </com.balysv.materialripple.MaterialRippleLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/routBottomView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size_15dp"
            android:layout_marginBottom="@dimen/size_30dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/SmallFontTextView"
                android:text="@string/hint_login_account"
                android:textColor="@color/colorSecondaryExtraLightText"
                android:textSize="@dimen/text_size_14sp" />

            <TextView
                android:id="@+id/txtLogin"
                style="@style/SmallFontTextView"
                android:layout_marginStart="@dimen/size_8dp"
                android:fontFamily="@string/font_family_medium"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_14sp" />
        </LinearLayout>

    </RelativeLayout>
</layout>

