<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <View
            android:id="@+id/toolbarDivider"
            style="@style/ToolbarDivider"
            android:layout_below="@+id/toolbar"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/routSearchView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:layout_below="@id/toolbarDivider"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_14dp"
            android:layout_marginEnd="@dimen/size_16dp">

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40dp"
                android:layout_centerVertical="true"
                android:autofillHints=""
                android:background="@drawable/search_edittext_bg"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="@dimen/size_10dp"
                android:fontFamily="@string/font_family_regular"
                android:hint="@string/search_here"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:paddingStart="@dimen/size_14dp"
                android:paddingEnd="@dimen/size_14dp"
                android:singleLine="true"
                android:textSize="@dimen/text_size_16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <ProgressBar
                android:id="@+id/progressSearchUser"
                android:layout_width="@dimen/size_20dp"
                android:layout_height="@dimen/size_20dp"
                android:layout_alignEnd="@+id/edtSearch"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/size_12dp"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/routViewCart"
            android:layout_below="@id/routSearchView"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginBottom="@dimen/size_10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/loadMore"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtEmptyPlaceHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/error_empty_data"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_14sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/loadMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/size_16dp"
                android:paddingTop="@dimen/size_8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="@dimen/size_8dp"
                android:visibility="gone">

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_6dp"
                    android:padding="@dimen/size_3dp"
                    android:text="@string/loading_more"
                    android:textColor="@color/colorPrimaryText" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/routViewCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccentLight"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/size_16dp"
            android:paddingTop="@dimen/size_9dp"
            android:paddingEnd="@dimen/size_16dp"
            android:paddingBottom="@dimen/size_9dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtNumberOfCartItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/be_vietnam_regular"
                android:text="@string/view_added_tea_bills"
                android:textColor="@color/colorPrimaryText2"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/txtViewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/be_vietnam_medium"
                android:text="@string/view"
                android:textColor="@color/colorAccentText"
                android:textSize="@dimen/text_size_17sp" />

        </RelativeLayout>

        <include
            android:id="@+id/progressBarView"
            layout="@layout/layout_progressbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbarDivider" />

    </RelativeLayout>

</layout>
